<resources>
    <string name="app_name">Coba</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello DashboardSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello NotificationsSecondFragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="home_second">Home Second</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="notification">Notification</string>
    <string name="username">username</string>
    <string name="bio">Bio</string>
    <string name="full_name">Full Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="following">Following</string>
    <string name="_0">0</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="search">Search...</string>
    <string name="add_post">Add post</string>
    <string name="notif">Notif</string>
    <string name="profile">Profile</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="atau">Atau</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="need_account_sign_up">Need Account? Sign Up</string>
    <string name="username_register">Username</string>
    <string name="fullname">Fullname</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="comments">Comments</string>
    <string name="comments_titik">comments...</string>
    <string name="publish">Publish</string>
    <string name="change_image">Change Image</string>
    <string name="profile_name">Profile Name</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="comment_text">comment text</string>
    <string name="follow">Follow</string>
    <string name="login_to_app">Welcome, Please Login your Account!</string>
    <string name="regis_text">Please Create Your Account</string>

</resources>