<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AccountSettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_layout_setprofile"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/notifications_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close_profile_btn"
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/close"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/save_info_profile_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/save_edited_info"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setprofile_image_view"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/app_bar_layout_setprofile"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profile"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/change_setimage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/setprofile_image_view"/>

    <EditText
        android:id="@+id/fullname_setprofile_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_setimage_text"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:hint="@string/profile_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/username_setprofile_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullname_setprofile_edittext"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:hint="@string/username_register"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/bio_setprofile_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_setprofile_edittext"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:hint="@string/bio"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/logout_btn_setprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/delete_account_btn_setprofile"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/button_black_background"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:backgroundTint="#007FAC" />

    <Button
        android:id="@+id/delete_account_btn_setprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/delete_account"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:backgroundTint="#007FAC" />

</RelativeLayout>