<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".activity.RegisterActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="214dp"
        android:layout_height="174dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="102dp"
        tools:srcCompat="@drawable/logo5" />

    <TextView
        android:id="@+id/tv_regis"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:gravity="center"
        android:text="@string/regis_text"
        android:textColor="#007FAC"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/fullname_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_regis"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="@drawable/inputs_background"
        android:hint="@string/fullname"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullname_register"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="@drawable/inputs_background"
        android:hint="@string/username_register"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_register"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="@drawable/inputs_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_register"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="@drawable/inputs_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_register"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_bg"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:backgroundTint="#007FAC" />

    <TextView
        android:id="@+id/tv_newuser2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_register"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="already have an account?"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_to_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_newuser2"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:text="Sign In"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textStyle="bold" />

</RelativeLayout>