<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_alignStart="@+id/logo"
        android:layout_alignEnd="@+id/logo"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="-40dp"
        android:gravity="center"
        android:text="@string/login_to_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#007FAC"
        android:textSize="16sp"
        app:fontFamily="@font/poppinssemibold" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="214dp"
        android:layout_height="174dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="102dp"
        tools:srcCompat="@drawable/logo5" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="@drawable/inputs_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_login"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:background="@drawable/inputs_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_login"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/facebook_button_bg"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:backgroundTint="#007FAC" />

    <TextView
        android:id="@+id/tv_newuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="New User?"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_newuser"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:text="Register Here"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textStyle="bold" />

</RelativeLayout>