<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CommentApps">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_layout_comments"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/comment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textSize="20sp"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_comments"
        android:layout_width="407dp"
        android:layout_height="599dp"
        android:layout_above="@+id/commentRelative"
        android:layout_below="@+id/app_bar_layout_comments"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp">

    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/commentRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:padding="6dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_comment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/profile"/>

        <EditText
            android:id="@+id/add_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/txtpost_comments"
            android:layout_toEndOf="@+id/profile_image_comment"
            android:hint="@string/comments_titik"
            android:minHeight="48dp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/txtpost_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/publish"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="6dp"/>

    </RelativeLayout>


</RelativeLayout>